# libreria

./: CMakeLists.txt  readme.txt
include/: banconote.hpp  book.hpp  carrello.hpp  cassa.hpp  csv.hpp  library.hpp  salvajson.hpp  txt.hpp  vinili.hpp
src/: banconote.cpp  book.cpp  carrello.cpp  cassa.cpp  csv.cpp  library.cpp  main.cpp  salvajson.cpp  txt.cpp  vinili.cpp
